# personal-assistant

./: .coverage  .env.example  .gitignore  README.md  TESTING.md  main.py  personal_assistant.db  pyproject.toml  pytest.ini  setup_api_keys.py  test_agent.py  test_agent_integration.py  test_database_tools.py  test_database_tools_refactor.py  test_models_refactor.py  test_simple.py  test_sql_tools.py  test_todoist_tools.py
.github/workflows/: test.yml
agent/: __init__.py  agent_helpers.py  custom_parser.py  main.py  memory_pruner.py  rate_limiter.py  tool_regestery.py
agent/main_agent/: __init__.py  custom_parser.py
agent/main_agent/tools/: task_scheduler.py
agent/specialized_agents/: blueprint.py  news_agent.py  planner_agent.py
agent/tools/: extra_tools.py  task_scheduler.py  telegram_scraper.py  tiktik_tool.py  tool_regestery.py  tool_registry.py
agent/tools/news_tools/: news_processor_tool.py  rss_feed_tool.py
agent/tools/planner_tools/: database_tools.py  todoist_tool.py
config/: __init__.py  logging_config.py  settings.py
database/: __init__.py  models.py
docs/: testing-guide.md
telegram-bot/: handlers.py  main.py
telegram_bot/: __init__.py  handlers.py  main.py  voice_processor.py
telegram_scraper/: __init__.py  collector.py  example_usage.py
tests/: conftest.py  test_config.py  test_integration.py  test_main_agent.py  test_telegram_components.py  test_telegram_components_fixed.py
tests/e2e/: test_full_workflows.py
tests/integration/: test_agent_workflows.py  test_todoist_integration.py  test_tool_integration.py
tests/unit/: test_config.py  test_database_tools.py  test_models.py  test_optimizations.py  test_telegram_tools.py
