[project]
name = "personal-assistant-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.13",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "telethon>=1.40.0",
]
