[project]
name = "personal-assistant-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.0.13",
    "langgraph>=0.2.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "telethon>=1.40.0",
    "duckduckgo-search>=8.1.1",
    "wikipedia>=1.4.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "faster-whisper>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "todoist-api-python>=3.1.0",
]
